--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,5 +2,8 @@
 
 @import "partials/forms";
 
-@import "partials/orignial"
- 
+@import "partials/orignial";
+
+.completed {
+	text-decoration: line-through;
+} 	
